--- a/css/style.scss
+++ b/css/style.scss
@@ -25,6 +25,24 @@
 	url("../fonts/robotobold.woff") format("woff");
 }
 
+@-webkit-keyframes fade {
+	from {
+		opacity: .4;
+	} 
+	to {
+		opacity: 1;
+	}
+}
+
+@keyframes fade {
+	from {
+		opacity: .4;
+	} 
+	to {
+		opacity: 1;
+	}
+}
+
 *, *::before, *::after {
 	box-sizing: inherit;
 }
@@ -62,7 +80,7 @@ input[type="checkbox"].visually-hidden {
 	padding: 0;
 	white-space: nowrap;
 	-webkit-clip-path: inset(100%);
-			clip-path: inset(100%);
+	clip-path: inset(100%);
 	clip: rect(0 0 0 0);
 	overflow: hidden;
 }
@@ -127,7 +145,7 @@ input[type="checkbox"].visually-hidden {
 .page-nav {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	align-items: flex-end;
 }
 
 .page-header-logo {
@@ -137,10 +155,15 @@ input[type="checkbox"].visually-hidden {
 
 .nav-items {
 	display: flex;
+	margin-bottom: 9px;
 }
 
 .nav-item {
-	margin: 0 24px;
+	margin-right: 46px;
+}
+
+.nav-user-items {
+	margin-bottom: 9px;
 }
 
 .basket {
@@ -216,7 +239,6 @@ input[type="checkbox"].visually-hidden {
 } 
 
 .slider-item {
-	display: none;
 	padding: 78px 0 80px 0;
 
 	h3 {
@@ -241,10 +263,6 @@ input[type="checkbox"].visually-hidden {
 }
 
 .slider-item:nth-child(1) {
-	display: block;
-}
-
-.slider-item:nth-child(1) {
 	background: url(../img/slide1.png) 93% 18px no-repeat;
 }
 
@@ -255,3 +273,63 @@ input[type="checkbox"].visually-hidden {
 .slider-item:nth-child(3) {
 	background: url(../img/slide3.png) 100% 20px no-repeat;
 }
+
+.fade {
+	-webkit-animation-name: fade;
+	animation-name: fade;
+	-webkit-animation-duration: 1.5s;
+	animation-duration: 1.5s;
+}
+
+.advantages {
+	padding: 80px 0;
+}
+
+.advantages-list {
+	display: flex;
+}
+
+.advantage-item {
+	display: flex;
+	flex-direction: column;
+	width: 300px;
+	margin-right: 100px;
+}
+
+.advantage-apps .advantage-btn {
+	background-color: #00ca74;
+}
+
+.advantage-presentations .advantage-btn {
+	background-color: #efc84a;
+}
+
+.advantage-title {
+	margin: 0;
+	margin-bottom: 16px;
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 30px;
+	text-transform: uppercase;
+	color: #000;
+}
+
+.advantage-desc {
+	margin: 0 20px 32px 0;
+}
+
+.advantage-img {
+	order: -1;
+	margin-bottom: 25px;
+}
+
+.advantage-btn {
+	align-self: flex-start;
+	padding: 16px 40px;
+}
+
+hr {
+	border: 1px solid #eee;
+}
+
+
