--- a/css/style.scss
+++ b/css/style.scss
@@ -43,6 +43,50 @@
 	}
 }
 
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
+@keyframes smack { 
+	0% { transform: matrix3d(0.1, 0, 0, 0, 0, 0.1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	3.2% { transform: matrix3d(0.411, 0.117, 0, 0, 0.077, 0.411, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	4.5% { transform: matrix3d(0.537, 0.181, 0, 0, 0.118, 0.537, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	6.41% { transform: matrix3d(0.705, 0.254, 0, 0, 0.166, 0.705, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	9.01% { transform: matrix3d(0.892, 0.292, 0, 0, 0.191, 0.892, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	12.71% { transform: matrix3d(1.057, 0.239, 0, 0, 0.158, 1.057, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	13.51% { transform: matrix3d(1.079, 0.219, 0, 0, 0.145, 1.079, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	17.92% { transform: matrix3d(1.125, 0.104, 0, 0, 0.069, 1.125, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	18.92% { transform: matrix3d(1.123, 0.081, 0, 0, 0.054, 1.123, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	25.23% { transform: matrix3d(1.068, -0.001, 0, 0, -0.001, 1.068, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	29.03% { transform: matrix3d(1.029, -0.015, 0, 0, -0.01, 1.029, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	31.43% { transform: matrix3d(1.011, -0.017, 0, 0, -0.011, 1.011, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	34.63% { transform: matrix3d(0.995, -0.014, 0, 0, -0.01, 0.995, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	40.14% { transform: matrix3d(0.986, -0.007, 0, 0, -0.005, 0.986, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	56.46% { transform: matrix3d(1, 0.001, 0, 0, 0.001, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	62.36% { transform: matrix3d(1.002, 0.001, 0, 0, 0, 1.002, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	81.48% { transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	84.68% { transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); }
+	100% { transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); } 
+}
+
 *, *::before, *::after {
 	box-sizing: inherit;
 }
@@ -527,12 +571,44 @@ input[type="checkbox"].visually-hidden {
 
 
 .modal-feedback {
-	position: relative;
+	display: none;
+	position: fixed;
+	top: 30px;
+	left: 50%;
 	width: 960px;
+	margin-left: -480px;
 	min-height: 590px;
 	padding: 64px 100px 84px;
+	background-color: #fff;
 	box-shadow: 0 20px 40px rgba(0, 1, 1, .75);
+	z-index: 2;
 }
+
+.modal-feedback-show {
+	display: block;
+	animation: smack 1s linear both;
+}
+
+.modal-feedback-error {
+	animation-name: shake;
+	animation-duration: 0.6s;
+}
+
+.modal-overlay {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	background-color: rgba(0, 0, 0, .3);
+}
+
+.modal-overlay-show {
+	display: block;
+}
+
 
 .modal-feedback-title {
 	margin: 0;
@@ -620,7 +696,9 @@ input[type="checkbox"].visually-hidden {
 
 	textarea {
 		width: 100%;
+		max-width: 100%;
 		min-height: 118px;
+		max-height: 150px;
 	}
 
 	input, 
