--- a/css/style.scss
+++ b/css/style.scss
@@ -25,15 +25,6 @@
 	url("../fonts/robotobold.woff") format("woff");
 }
 
-@-webkit-keyframes fade {
-	from {
-		opacity: .4;
-	} 
-	to {
-		opacity: 1;
-	}
-}
-
 @keyframes fade {
 	from {
 		opacity: .4;
@@ -156,6 +147,17 @@ input[type="checkbox"].visually-hidden {
 	&:active {
 		color: rgba(0, 0, 0, .3);
 	}
+
+	&:not([href]) {
+		padding-bottom: 9px;
+		border-bottom: 2px solid #fb565a;
+	}
+
+	&:hover:not([href]),
+	&:focus:not([href]),
+	&:active:not([href]) {
+		color: #000;
+	}
 }
 
 .btn {
@@ -200,6 +202,15 @@ input[type="checkbox"].visually-hidden {
 .page-header-logo {
 	width: 160px;
 	height: 65px;
+
+	&:hover[href],
+	&:focus[href] {
+		opacity: .8;
+	}
+
+	&:active[href] {
+		opacity: .3;
+	}
 }
 
 .nav-items {
@@ -322,9 +333,7 @@ input[type="checkbox"].visually-hidden {
 }
 
 .fade {
-	-webkit-animation-name: fade;
 	animation-name: fade;
-	-webkit-animation-duration: 1.5s;
 	animation-duration: 1.5s;
 }
 
@@ -804,7 +813,283 @@ input[type="checkbox"].visually-hidden {
 		line-height: 22px;
 		color: #444;
 	}
-	
+}
+
+
+.shop-header-title {
+	margin: 0;
+	padding: 78px 0 110px;
+	font-size: 55px;
+	line-height: 55px;
+	font-weight: 500;
+	color: #000;
+	text-align: center;
+}
+
+.filters {
+	width: 260px;
+}
+
+.filter-item {
+	margin: 0;
+	padding: 0;
+	border: none;
+
+	legend {
+		font-size: 18px;
+		line-height: 30px;
+		font-weight: 700;
+		text-transform: uppercase;
+		color: #000;
+	}
+}
+
+.filter-item-range {
+	margin-bottom: 53px;
+}
+
+.range-filter {
+	width: 260px;
+	margin-top: 49px;
+
+	.range-controls {
+		position: relative;
+		height: 80px;
+		margin-bottom: 15px;
+		padding: 39px 20px 0;
+		background-color: #eee;
+		border-radius: 5px;
+
+		.scale {
+			height: 2px;
+			background-color: #d7dcde;
+
+			.bar {
+				width: 70%;
+				height: 2px;
+				background: #00ca74;
+			}
+		}
+
+		.toggle {
+			position: absolute;
+			top: 31px;
+			left: 0;
+			width: 20px;
+			height: 20px;
+			padding: 0;
+			border: 8px solid #fff;
+			background-color: #ababab;
+			box-shadow: 0 2px 1px 0 #cfcfcf;
+			border-radius: 50%;
+			cursor: pointer;
+		}
+
+		.toggle-min {
+			left: 18px;
+		}
+
+		.toggle-max {
+			left: 160px;
+		}
+	}
+
+	.price-controls {
+		font-size: 0;
+
+		label {
+			display: inline-block;
+			width: 50%;
+			font-size: 16px;
+			text-transform: uppercase;
+
+			input {
+				width: 80px;
+				margin-left: 10px;
+				padding: 8px 10px;
+				font-family: inherit;
+				font-size: 16px;
+				text-align: center;
+				color: #283136;
+				border: none;
+				border-radius: 5px;
+				background: #eee;
+			}
+		}
+
+		.max-price {
+			text-align: right;
+		}
+	}
+}
+
+.filter-item-grid {
+
+	legend {
+		margin-bottom: 12px;
+	}
+
+	label {
+		position: relative;
+		display: block;
+		margin-bottom: 15px;
+		padding-left: 35px;
+		cursor: pointer;
+		color: #283136;
+	}
+
+	label::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 25px;
+		height: 25px;
+		border: 4px solid rgba(40, 49, 54, .4);
+		border-radius: 50%;
+	}
+
+	input:checked + label::after {
+		content: "";
+		position: absolute;
+		top: 8px;
+		left: 8px;
+		width: 9px;
+		height: 9px;
+		background-color: rgba(40, 49, 54, .4);
+		border-radius: 50%;
+	}
+
+	label:hover,
+	input:focus + label {
+		color: #000;
+	}
+
+	label:hover::before,
+	input:focus + label::before {
+		border-color: #283136;
+	}
+
+    input:checked + label:hover::after,
+    input:checked:focus + label::after {
+		background-color: #283136;
+	}
+
+	input:disabled + label {
+		color: rgba(40, 49, 54, .3);
+		cursor: default;
+	}
+
+	input:disabled + label::before {
+		border-color: rgba(40, 49, 54, .1);
+	}
+
+	input:disabled + label::after {
+		background-color: transparent;
+	}
+
+	input:checked:disabled + label::after {
+		background-color: rgba(40, 49, 54, .1);
+	}
+}
+
+.filter-item-features {
+
+	legend {
+		margin-bottom: 12px;
+	}
+
+	label {
+		position: relative;
+		display: block;
+		margin-bottom: 15px;
+		padding-left: 36px;
+		cursor: pointer;
+	}
+
+	input + label::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 23px;
+		height: 23px;
+		border: 2px solid rgba(40, 49, 54, .4);
+		border-radius: 3px;
+	}
+
+	input:checked + label::after {
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 27px;
+		height: 23px;
+		background: url(../img/checkbox-on.svg) no-repeat;
+		opacity: .4;
+	}
+
+	input:checked + label::before,
+    input:checked + label:hover::before,
+    input:checked:focus + label::before {
+        border-color: transparent;
+    }
+
+    label:hover,
+    input:focus + label {
+        color: #000;
+    }
+
+    label:hover::before,
+    input:focus + label::before {
+        border-color: #283136;
+    }
+
+    input:checked + label:hover::after,
+    input:checked:focus + label::after {
+        opacity: 1;
+    }
+
+    input:disabled + label {
+		color: rgba(40, 49, 54, .3);
+		cursor: default;
+	}
+
+    input:disabled + label::before {
+        border-color: rgba(40, 49, 54, .1);
+    }
+    
+    input:checked:disabled + label::before {
+        border-color: transparent;
+    }
+
+    input:checked:disabled + label::after {
+        opacity: 0.1;
+    }
+}
+
+.filter-btn {
+	width: 100%;
+	padding: 16px 0;
+	font-size: 16px;
+	line-height: 18px;
+	font-weight: 500;
+	text-transform: uppercase;
+	background-color: #eee;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+
+	&:hover, 
+	&:focus {
+		background-color: #dfdfdf;
+	}
+
+	&:active {
+		color: rgba(0, 0, 0, .3);
+		background-color: #d5d5d5;
+		box-shadow: inset 0 3px rgba(0, 1, 1, .1);
+	}
 }
 
 
