--- a/css/style.scss
+++ b/css/style.scss
@@ -1108,6 +1108,7 @@ main {
 
 	.filter-sort {
 		display: flex;
+		margin-bottom: 46px;
 
 		p {
 			margin: 0;
@@ -1188,6 +1189,98 @@ main {
 		.arrow:active::before {
 			border-bottom-color: #000;
 			border-top-color: #000;
+		}
+	}
+}
+
+.template-list {
+	display: flex;
+	flex-wrap: wrap;
+	margin-left: -38px;
+}
+
+.template-item {
+	width: 362px;
+	margin-left: 37px;
+	margin-bottom: 33px;
+	overflow: hidden;
+
+	&:hover {
+		box-shadow: 0 6px 15px rgba(0, 1, 1, .25);
+		transition: box-shadow .5s;
+	}
+
+	&:hover .substrate {
+		background-color: #4d4d4d;
+	}
+
+	&:hover figcaption {
+		opacity: 1;
+		bottom: 0;
+	}
+
+	figure {
+		margin: 0;
+		position: relative;
+
+		.substrate {
+			display: flex;
+			align-items: center;
+			width: 100%;
+			height: 40px;
+			padding-left: 15px;
+			background-color: #e9e9e9;
+			border-top-left-radius: 5px;
+			border-top-right-radius: 5px;
+			transition: background-color .5s;
+
+			span {
+				margin-right: 9px;
+				width: 14px;
+				height: 14px;
+				background-color: #fff;
+				border-radius: 50%;
+			}
+		}
+
+		img {
+			display: block;
+			box-sizing: content-box;
+			border: 1px solid rgba(0, 1, 1, .1);
+		}
+	}
+
+	figcaption {
+		position: absolute;
+		bottom: -200px;
+		left: 0;
+		right: 0;
+		padding: 20px 65px 43px;
+		text-align: center;
+		background-color: #eee;
+		opacity: 0;
+		transition: .5s;
+
+		h3 {
+			margin: 0;
+			margin-bottom: 14px;
+			font-size: 18px;
+			line-height: 30px;
+			font-weight: 700;
+			text-transform: uppercase;
+			color: #000;
+		}
+
+		p {
+			margin: 0;
+			margin-bottom: 30px;
+			font-size: 16px;
+			line-height: 18px;
+			color: #666;
+		}
+
+		.btn {
+			padding: 16px 60px;
 		}
 	}
 }
