--- a/css/style.scss
+++ b/css/style.scss
@@ -827,7 +827,7 @@ input[type="checkbox"].visually-hidden {
 }
 
 main {
-	padding: 54px 0 60px;
+	padding-top: 54px;
 }
 
 .shop-columns {
@@ -1202,7 +1202,7 @@ main {
 .template-item {
 	width: 362px;
 	margin-left: 37px;
-	margin-bottom: 33px;
+	margin-bottom: 30px;
 	overflow: hidden;
 
 	&:hover {
@@ -1281,6 +1281,62 @@ main {
 
 		.btn {
 			padding: 16px 60px;
+		}
+	}
+}
+
+.pagination-list {
+	display: flex;
+	margin-top: 29px;
+	margin-bottom: 60px;
+}
+
+.pagination-item {
+	margin-right: 10px;
+
+	&:last-child a {
+		padding: 14px 75px;
+	}
+
+	a {
+		display: block;
+		padding: 14px 18px;
+		font-size: 16px;
+		line-height: 16px;
+		font-weight: 500;
+		text-transform: uppercase;
+		color: #000;
+		background-color: #eee;
+		border: 3px solid #eee;
+		border-radius: 5px;
+
+		&:hover,
+		&:focus {
+			background-color: #dfdfdf;
+			border-color: #dfdfdf;
+		}
+
+		&:active {
+			color: rgba(0, 0, 0, .3);
+			background-color: #d5d5d5;
+			border-color: #d5d5d5;
+			border-top-color: rgba(0, 1, 1, .1);
+		}
+	}
+
+	.active {
+		background-color: transparent;
+		border-color: #dbdbdb;
+
+		&:hover {
+			background-color: transparent;
+			border-color: #dbdbdb;
+		}
+
+		&:active {
+			color: #000;
+			background-color: transparent;
+			border-color: #dbdbdb;
 		}
 	}
 }
