--- a/css/style.scss
+++ b/css/style.scss
@@ -26,34 +26,24 @@
 }
 
 @keyframes fade {
-	from {
-		opacity: .4;
-	} 
-	to {
-		opacity: 1;
-	}
+	from { opacity: .4; } 
+	to { opacity: 1; }
 }
 
 @keyframes shake {
-  0%,
-  100% {
-    transform: translateX(0);
-  }
+	0%,
+	100% { transform: translateX(0); }
 
-  10%,
-  30%,
-  50%,
-  70%,
-  90% {
-    transform: translateX(-10px);
-  }
+	10%,
+	30%,
+	50%,
+	70%,
+	90% { transform: translateX(-10px); }
 
-  20%,
-  40%,
-  60%,
-  80% {
-    transform: translateX(10px);
-  }
+	20%,
+	40%,
+	60%,
+	80% { transform: translateX(10px); }
 }
 
 @keyframes smack { 
@@ -529,15 +519,15 @@ input[type="checkbox"].visually-hidden {
 	position: relative;
 }
 
-.map {
+.map-container {
     width: 100%;
     height: 416px;
     overflow: hidden;
     text-align: center;
 
-    iframe {
-        border: 0;
+    .map {
         width: 100%;
+        height: 100%;
     }
 }
 
@@ -549,6 +539,7 @@ input[type="checkbox"].visually-hidden {
 	min-height: 308px;
 	padding: 50px 50px 47px;
 	background-color: #fff;
+	z-index: 1;
 
 	h3 {
 		margin: 0;
